# mpp-scanner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
contracts/: foundry.toml
contracts/src/: SecurityCertificate.sol
contracts/test/: SecurityCertificate.t.sol
mpp_scanner/: __init__.py  discovery.py  engine.py  models.py  poc.py  reporter.py
mpp_scanner/checks/: __init__.py  base.py  dos.py  inject.py  overclaim.py  price.py  race.py  session.py  verify.py
mpp_scanner/service/: app.py  cache.py  chain.py  middleware.py  scheduler.py  verifier.py
mpp_scanner/service/routers/: certificate.py  health.py  scan.py
tests/: conftest.py
tests/fixtures/: mock_mpp_server.py  vuln_mpp_server.py
tests/test_checkers/: test_dos.py  test_inject.py  test_overclaim.py  test_price.py  test_race.py  test_session.py  test_verify.py
tests/test_integration/: test_full_flow.py  test_service.py
