[project]
name = "mpp-scanner"
version = "0.1.0"
description = "First vulnerability scanner for MPP (Machine Payment Protocol) services"
readme = "README.md"
authors = [
    { name = "Slippy87", email = "slippy87@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "web3>=7.6.0",
    "redis>=5.2.0",
    "rq>=2.1.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.scripts]
mpp-scan = "cli.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpp_scanner", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
